--- a/rust-bindings/bls-signatures/Cargo.toml
+++ b/rust-bindings/bls-signatures/Cargo.toml
@@ -8,11 +8,11 @@ edition = "2021"
 legacy = []
 bip32 = []
 use_serde = ["serde"]
-dash_helpers = ["rand"]
-default = [ "legacy", "bip32", "dash_helpers", "use_serde"]
-apple = ["bls-dash-sys/apple"]
+diabase_helpers = ["rand"]
+default = [ "legacy", "bip32", "diabase_helpers", "use_serde"]
+apple = ["bls-diabase-sys/apple"]
 
 [dependencies]
-bls-dash-sys = { path = "../bls-dash-sys" }
+bls-diabase-sys = { path = "../bls-diabase-sys" }
 serde = { version= "1.0.160", features = ["derive"], optional = true}
 rand = { version= "0.8.5", optional = true}
